# Coding-Exercise-2024

./: CMakeLists.txt  README.md  simulation.cpp
.github/workflows/: compileandrun.yml
data_logger/: CMakeLists.txt
data_logger/include/: logger.hpp
data_logger/src/: logger.cpp
equipment/: CMakeLists.txt
equipment/station/: CMakeLists.txt
equipment/station/include/: station.hpp
equipment/station/src/: station.cpp
equipment/truck/: CMakeLists.txt
equipment/truck/include/: truck.hpp
equipment/truck/src/: truck.cpp
